force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Adjustment_Heading__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Heading__c</fullName>
    <label>Adjustment Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>