force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>This field gets the value of "Agent Booking" on Quote</description>
    <formula>Agent_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent</label>
    <type>Checkbox</type>
</CustomField>