force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Agent_Booking__c.field-meta.xml
<CustomField>
    <fullName>Agent_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Booking</label>
    <type>Checkbox</type>
</CustomField>