force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APTS_Departure_Point__c.field-meta.xml
<CustomField>
    <fullName>APTS_Departure_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Quote for filtering Departure point</description>
    <label>Departure Point</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 AND 3) OR (4 AND 5)</booleanFilter>
        <filterItems>
            <field>Departure_Point__c.Market__c</field>
            <operation>equals</operation>
            <valueField>$Source.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>Departure_Point__c.Program__c</field>
            <operation>equals</operation>
            <value>LT</value>
        </filterItems>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <value>LT</value>
        </filterItems>
        <filterItems>
            <field>Departure_Point__c.Program__c</field>
            <operation>notEqual</operation>
            <value>LT</value>
        </filterItems>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>notEqual</operation>
            <value>LT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Departure_Point__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>