force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APTS_Language__c.field-meta.xml
<CustomField>
    <fullName>APTS_Language__c</fullName>
    <formula>TEXT(Apttus_Proposal__Account__r.Language__c)</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>