force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APTS_Market__c.field-meta.xml
<CustomField>
    <fullName>APTS_Market__c</fullName>
    <description>This is used for getting Account Market value to Quote Object</description>
    <formula>TEXT(Apttus_Proposal__Account__r.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>