force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apts_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Apts_Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EF Price List</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>Apttus_Config2__PriceList__c.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <valueField>Apttus_Config2__PriceList__c.Program__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>Apttus_Config2__PriceList__c.CurrencyIsoCode</valueField>
        </filterItems>
        <filterItems>
            <field>Apttus_Config2__PriceList__c.Apttus_Config2__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Proposals (Price List)</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>