force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APTS_Product__c.field-meta.xml
<CustomField>
    <fullName>APTS_Product__c</fullName>
    <formula>IF( OR( ISPICKVAL( Program__c , "AY"), 
ISPICKVAL( Program__c , "MLY"),ISPICKVAL( Program__c , "PRW")), "APP", 

IF( OR( ISPICKVAL( Program__c , "EXC"), ISPICKVAL( Program__c , "ILS"),
ISPICKVAL( Program__c , "ILSH"),ISPICKVAL( Program__c , "ILSU")), "ILS", 

IF (ISPICKVAL( Program__c , "LT"),"LT",'')))</formula>
    <label>APTS_Product</label>
    <type>Text</type>
</CustomField>