force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APTS_Special_Diet__c.field-meta.xml
<CustomField>
    <fullName>APTS_Special_Diet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the customer has dietary needs this needs to be checked.</description>
    <label>Special Diet</label>
    <type>Checkbox</type>
</CustomField>