force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APTSTWTRCourse__c.field-meta.xml
<CustomField>
    <fullName>APTSTWTRCourse__c</fullName>
    <description>Is used to identify if a sales user is going to create a Twin or Triple Quote.</description>
    <label>TW/TR Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>