force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__CreateAgreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__CreateAgreement__c</fullName>
    <description>Create Agreement, if the proposal is accepted.</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, "Accepted") , HYPERLINK("/apex/Apttus_Proposal__ProposalAgreementCreate?id=" &amp;Id, IMAGE("/resource/Apttus_Proposal__Button_CreateAgreement", "Create Agreement"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Agreement</label>
    <type>Text</type>
</CustomField>