force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Generate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Generate__c</fullName>
    <description>Generate a quote/proposal</description>
    <formula>IF (Apttus_Proposal__ReadyToGenerate__c, HYPERLINK("/apex/Apttus_Proposal__ProposalGenerate?id="&amp;Id , IMAGE("/resource/Apttus_Proposal__Button_Generate", "Generate"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate a quote/proposal</inlineHelpText>
    <label>Generate</label>
    <type>Text</type>
</CustomField>