force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__MakePrimary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__MakePrimary__c</fullName>
    <description>Make the quote/proposal primary for the associated opportunity</description>
    <formula>IF (AND(LEN(Apttus_Proposal__Opportunity__c ) > 0, NOT(Apttus_Proposal__Primary__c)), HYPERLINK("/apex/Apttus_Proposal__ProposalMakePrimary?id="&amp;Id, IMAGE("/resource/Apttus_Proposal__Button_MakePrimary", "Make Primary"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make Primary</label>
    <type>Text</type>
</CustomField>