force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>Net 30 Days</fullName>
                <default>true</default>
                <label>Net 30 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>