force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Present__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Present__c</fullName>
    <description>Present the quote/proposal</description>
    <formula>IF (Apttus_Proposal__ReadyToPresent__c, HYPERLINK("/apex/Apttus_Proposal__ProposalPresent?id="&amp;Id, IMAGE("/resource/Apttus_Proposal__Button_Present", "Present"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present</label>
    <type>Text</type>
</CustomField>