force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Preview__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Preview__c</fullName>
    <description>Preview a quote/proposal</description>
    <formula>HYPERLINK("/apex/Apttus_Proposal__ProposalGenerate?id="&amp;Id &amp; "&amp;action=Preview", IMAGE("/resource/Apttus_Proposal__Button_Preview", "Preview"),"_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preview a quote/proposal</inlineHelpText>
    <label>Preview</label>
    <type>Text</type>
</CustomField>