force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Proposal_Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Proposal_Category__c</fullName>
    <description>The quote/proposal category</description>
    <inlineHelpText>The quote/proposal category</inlineHelpText>
    <label>Proposal Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>