force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Request_Approval__c</fullName>
    <formula>HYPERLINK("/servlet/servlet.Integration?lid=01N700000009u2c&amp;eid="&amp;Id, IMAGE("/servlet/servlet.ImageServer?oid=00D70000000JXTN&amp;id=01570000000e6nU", "Submit") )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Approval</label>
    <type>Text</type>
</CustomField>