force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Risk_Factors__c</fullName>
    <description>The risk factors associated with the quote/proposal</description>
    <label>Risk Factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Price Pressure</fullName>
            </value>
            <value>
                <fullName>Technical Delivery</fullName>
            </value>
            <value>
                <fullName>Turnaround Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>