force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__SendProposal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__SendProposal__c</fullName>
    <description>Generate and send a quote/proposal</description>
    <formula>IF (Apttus_Proposal__ReadyToGenerate__c, HYPERLINK("/apex/Apttus_Proposal__DocGen?id="&amp;Id + "&amp;context=proposal" + "&amp;name="&amp;Name, IMAGE("/resource/Apttus_Proposal__Button_SendProposal", "Send Proposal"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate and send a quote/proposal</inlineHelpText>
    <label>Send Proposal</label>
    <type>Text</type>
</CustomField>