force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__SubmitForApproval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__SubmitForApproval__c</fullName>
    <description>Submit the quote/proposal for approval</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, "Approval Required"), HYPERLINK("/apex/Apttus_Proposal__ProposalSubmit?id="&amp;Id, IMAGE("/resource/Apttus_Proposal__Button_SubmitForApproval", "Submit for Approval"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit For Approval</label>
    <type>Text</type>
</CustomField>