force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__Accept__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Accept__c</fullName>
    <description>Accept the quote/proposal</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, "Presented"), HYPERLINK("/apex/Apttus_QPConfig__ProposalAccept?id="&amp;Id, IMAGE("/resource/Apttus_QPConfig__Button_Accept", "Accept"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accept</label>
    <type>Text</type>
</CustomField>