force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__Configure__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Configure__c</fullName>
    <description>Configure products for the quote/proposal</description>
    <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) > 0 , HYPERLINK("/apex/Apttus_QPConfig__ProposalConfiguration?id=" &amp;Id &amp; "&amp;flow=Default", IMAGE("/resource/Apttus_QPConfig__Button_Configure", "Configure Products"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Products</label>
    <type>Text</type>
</CustomField>