force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__SyncWithOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__SyncWithOpportunity__c</fullName>
    <description>Synchronize the quote/proposal with the associated opportunity</description>
    <formula>IF ( AND(LEN(Apttus_Proposal__Opportunity__c ) > 0, Apttus_Proposal__Primary__c) , HYPERLINK("/apex/Apttus_QPConfig__ProposalSyncWithOpportunity?id=" &amp;Id, IMAGE("/resource/Apttus_QPConfig__Button_SynchronizeWithOpportunity", "Sync with Opportunity"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Synchronize with Opportunity</label>
    <type>Text</type>
</CustomField>