force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Articles_Heading__c.field-meta.xml
<CustomField>
    <fullName>Articles_Heading__c</fullName>
    <label>Articles Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>