force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/BookingChannel__c.field-meta.xml
<CustomField>
    <fullName>BookingChannel__c</fullName>
    <description>This field specifies from which channel the booking has been initiated.</description>
    <label>Booking Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ExhibitionFair</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>