force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/BookingType__c.field-meta.xml
<CustomField>
    <fullName>BookingType__c</fullName>
    <description>This field displays the Booking type for sending data to Poseidon through Quote to Booking.</description>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BKN</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>