force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Code_Heading__c.field-meta.xml
<CustomField>
    <fullName>Code_Heading__c</fullName>
    <label>Code Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>