force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/ComparativeQuote__c.field-meta.xml
<CustomField>
    <fullName>ComparativeQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to modify the pricing logic for the Line Items - if checked, cumulative ranges (such as Quantity are not applied) so that each Courses/Travel Insurance articles are priced independently per Destination Bundle</description>
    <label>Comparative Quote</label>
    <type>Checkbox</type>
</CustomField>