force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/CustomAccept__c.field-meta.xml
<CustomField>
    <fullName>CustomAccept__c</fullName>
    <formula>IF (AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, "Presented"), Apttus_Proposal__Valid_Until_Date__c >= TODAY()), HYPERLINK("/apex/Apttus_QPConfig__ProposalAccept?id="&amp;Id, IMAGE("/resource/Apttus_QPConfig__Button_Accept", "Accept"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accept</label>
    <type>Text</type>
</CustomField>