force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/CustomConfigureProducts__c.field-meta.xml
<CustomField>
    <fullName>CustomConfigureProducts__c</fullName>
    <formula>IF ( AND(LEN( Apttus_QPConfig__PriceListId__c ) > 0, Apttus_Proposal__Valid_Until_Date__c>=TODAY(), ISPICKVAL( Apttus_Proposal__Approval_Stage__c , "Draft")), HYPERLINK("/apex/Apttus_QPConfig__ProposalConfiguration?id=" &amp;Id &amp; "&amp;flow=NGDefault", "Edit","_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Products</label>
    <type>Text</type>
</CustomField>