force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/CustomGenerate__c.field-meta.xml
<CustomField>
    <fullName>CustomGenerate__c</fullName>
    <formula>IF (AND(Apttus_Proposal__ReadyToGenerate__c, Apttus_Proposal__Valid_Until_Date__c >= TODAY ()), HYPERLINK("/apex/Apttus_Proposal__ProposalGenerate?id="&amp;Id , IMAGE("/resource/Apttus_Proposal__Button_Generate", "Generate"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate</label>
    <type>Text</type>
</CustomField>