force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/CustomPresent__c.field-meta.xml
<CustomField>
    <fullName>CustomPresent__c</fullName>
    <formula>IF (AND(Apttus_Proposal__ReadyToPresent__c, Apttus_Proposal__Valid_Until_Date__c >= TODAY()), HYPERLINK("/apex/Apttus_Proposal__ProposalPresent?id="&amp;Id, IMAGE("/resource/Apttus_Proposal__Button_Present", "Present"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present</label>
    <type>Text</type>
</CustomField>