force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Date_Format_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Format_Type__c</fullName>
    <formula>IF( 
(APTS_Market__c = "CNB") || 
(APTS_Market__c = "JPT") || 
(APTS_Market__c = "KRS") || 
(APTS_Market__c = "TWI") || 
(APTS_Market__c = "IRT") || 
(APTS_Market__c = "USB") , "DateTypeUS", 
"DateTypeROW")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Format Type</label>
    <type>Text</type>
</CustomField>