force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Discount_Heading__c.field-meta.xml
<CustomField>
    <fullName>Discount_Heading__c</fullName>
    <label>Discount Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>