force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Duration_Heading__c.field-meta.xml
<CustomField>
    <fullName>Duration_Heading__c</fullName>
    <label>Duration Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>