force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Formatted_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Validity_Date__c</fullName>
    <formula>IF(Date_Format_Type__c = "DateTypeUS", 

TEXT(MONTH(Apttus_Proposal__Valid_Until_Date__c)) &amp; "-" &amp; TEXT(DAY(Apttus_Proposal__Valid_Until_Date__c)) &amp; "-" &amp; TEXT(YEAR(Apttus_Proposal__Valid_Until_Date__c)), 

TEXT(DAY(Apttus_Proposal__Valid_Until_Date__c)) &amp; "-" &amp; TEXT(MONTH(Apttus_Proposal__Valid_Until_Date__c)) &amp; "-" &amp; TEXT(YEAR(Apttus_Proposal__Valid_Until_Date__c)) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Validity Date</label>
    <type>Text</type>
</CustomField>