force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/GeneralInfoTranslation__c.field-meta.xml
<CustomField>
    <fullName>GeneralInfoTranslation__c</fullName>
    <description>This field will contain general info translation details</description>
    <label>GeneralInfo Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>