force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Incentive_Heading__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Heading__c</fullName>
    <label>Incentive Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>