force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Insurance_Heading__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Heading__c</fullName>
    <label>Insurance Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>