force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/LatestGeneratedProposal__c.field-meta.xml
<CustomField>
    <fullName>LatestGeneratedProposal__c</fullName>
    <label>Latest Generated Proposal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>