force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Max_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Line_Number__c</fullName>
    <label>Max Line Number</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPConfig__LineNumber__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>