force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/No_of_Weeks_Heading__c.field-meta.xml
<CustomField>
    <fullName>No_of_Weeks_Heading__c</fullName>
    <label>No of Weeks Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>