force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Optional_Heading__c.field-meta.xml
<CustomField>
    <fullName>Optional_Heading__c</fullName>
    <label>Optional Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>