force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Optional_Items_Count_2__c.field-meta.xml
<CustomField>
    <fullName>Optional_Items_Count_2__c</fullName>
    <label>Optional Items Count 2</label>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPConfig__IsOptional__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPConfig__LineNumber__c</field>
        <operation>equals</operation>
        <value>2</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>